Log in and register page lay out designed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-menu-panel/question-menu-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-menu-panel/question-menu-panel.component.html
@@ -1,9 +1,9 @@
 ﻿<div class="menu-container">
     <div  class="row">
         <div >
-            <div class="question-title">Related Question</div>
+            <div class="question-title">Related Topics</div>
             <div class="question-list">
-                <p *ngFor="let question of questionMenuList">&iquest;{{question.questiontext}}?</p>
+                <p *ngFor="let category of categories">{{category.name}}</p>
             </div>
         </div>
     </div>
