--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/nav/question-nav.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/nav/question-nav.component.html
@@ -24,6 +24,7 @@
             <li><a routerLink="/question">Questions</a></li>
             <li><a routerLink="/learn">Learn</a></li>
             <li><a routerLink="/project">Project</a></li>
+            <li><button class="btn btn-default">Answer</button></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Log in</a></li>
