--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Login.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Login.cshtml
@@ -7,81 +7,76 @@
 @{
     ViewData["Title"] = "Log in";
 }
+@*<style>
+    h2 {
+        text-align: center;
+        margin-bottom: 25px;
+    }
 
-<h2>@ViewData["Title"].</h2>
+    input {
+        max-width: 100%;
+    }
+
+    .form-horizontal {
+        position: relative;
+        padding: 10px;
+        background-color: #ededed;
+        margin-top: 40px;
+        height: 305px;
+    }
+
+    .left-border {
+        background-image: url('../../images/border.png');
+        width: 4px;
+        margin-top: 40px;
+        position: absolute;
+        right: 0;
+        margin-right: -15px;
+        height: 305px;
+    }
+
+    .btn {
+        min-width: 100px;
+        background-color:#f7a30c;
+        color:white;
+    }
+</style>*@
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-4">
+        <img class="left-border" src="~/images/border.png" />
+    </div>
+    <div class="col-md-4">
+
         <section>
+
             <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
-                <h4>Use a local account to log in.</h4>
-                <hr />
+
+                <h2>Log In</h2>
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Email" class="col-md-2 control-label"></label>
-                    <div class="col-md-10">
-                        <input asp-for="Email" class="form-control" />
+                    <div class="col-sm-offset-1 col-md-10">
+                        <input asp-for="Email" placeholder="Email" class="form-control" />
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Password" class="col-md-2 control-label"></label>
-                    <div class="col-md-10">
-                        <input asp-for="Password" class="form-control" />
+                    <div class="col-sm-offset-1 col-md-10">
+                        <input asp-for="Password" placeholder="Password" class="form-control" />
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            <input asp-for="RememberMe" />
-                            <label asp-for="RememberMe"></label>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
+                    <div class="col-sm-offset-1 col-md-10">
                         <button type="submit" class="btn btn-default">Log in</button>
                     </div>
                 </div>
-                <p>
-                    <a asp-action="Register" asp-route-returnUrl="@ViewData["ReturnUrl"]">Register as a new user?</a>
-                </p>
-                <p>
-                    <a asp-action="ForgotPassword">Forgot your password?</a>
+                <p class="col-sm-offset-1">
+                    <a asp-action="ForgotPassword">Forgot password?</a>
                 </p>
             </form>
         </section>
     </div>
-    <div class="col-md-4">
-        <section>
-            <h4>Use another service to log in.</h4>
-            <hr />
-            @{
-                var loginProviders = SignInManager.GetExternalAuthenticationSchemes().ToList();
-                if (loginProviders.Count == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form asp-controller="Account" asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
-                        <div>
-                            <p>
-                                @foreach (var provider in loginProviders)
-                                {
-                                    <button type="submit" class="btn btn-default" name="provider" value="@provider.AuthenticationScheme" title="Log in using your @provider.DisplayName account">@provider.AuthenticationScheme</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
+    <div class="col-md-3">
     </div>
 </div>
 
