--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Register.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Register.cshtml
@@ -3,9 +3,8 @@
     ViewData["Title"] = "Register";
 }
 
-<h2>@ViewData["Title"].</h2>
 
-<form asp-controller="Account" asp-action="Register" asp-route-returnUrl="@ViewData["returnUrl"]" method="post" class="form-horizontal" role="form">
+@*<form asp-controller="Account" asp-action="Register" asp-route-returnUrl="@ViewData["returnUrl"]" method="post" class="form-horizontal" role="form">
     <h4>Create a new account.</h4>
     <hr />
     <div asp-validation-summary="All" class="text-danger"></div>
@@ -35,8 +34,52 @@
             <button type="submit" class="btn btn-default">Register</button>
         </div>
     </div>
-</form>
+</form>*@
+<div class="row">
+    <div class="col-md-4">
+        <img class="left-border" src="~/images/border.png" />
+    </div>
+    <div class="col-md-4">
 
+        <section>
+
+            <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
+
+                <h2>Sign Up</h2>
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-group">
+                    <div class="col-sm-offset-1 col-md-10">
+                        <input asp-for="Email" placeholder="Email" class="form-control" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-1 col-md-10">
+                        <input asp-for="Password" placeholder="Password" class="form-control" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-1 col-md-10">
+                        <input asp-for="ConfirmPassword" placeholder="Confirm Password" class="form-control" />
+                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-1 col-md-10">
+                        <button type="submit" class="btn btn-default">Sign Up</button>
+                    </div>
+                </div>
+                
+                @*<p class="col-sm-offset-1">
+                    <a asp-action="ForgotPassword">Forgot password?</a>
+                </p>*@
+            </form>
+        </section>
+    </div>
+    <div class="col-md-3">
+    </div>
+</div>
 @section Scripts {
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
