dashboard  initial layut added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/dashboard.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/dashboard.component.html
@@ -1,4 +1,12 @@
-﻿<div>
-    <h1>Dash Board</h1>
+﻿<ap-navdashboard></ap-navdashboard>
+<dash-tab></dash-tab>
+<div class="row dash-panel">
+    <div class="col-lg-2">.</div>
+
+    <div class="col-lg-2">Left Menu</div>
+    <div class="col-lg-6">Detail</div>
+
+    <div class="col-lg-2">.</div>
 </div>
+
 
