Change viewmodel to fit in json object

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-menu-panel/question-menu-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-menu-panel/question-menu-panel.component.html
@@ -7,12 +7,12 @@
             </div>
         </div>
     </div>
-    <div class="row">
+    <!--<div class="row">
         <div >
             <div class="question-title">Related Content</div>
             <div class="question-list">
                 <p *ngFor="let question of questionMenuList">&iquest;{{question.questiontext}}?</p>
             </div>
         </div>
-    </div>
+    </div>-->
 </div>
