DAshboard layout building

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Home/Index.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Home/Index.cshtml
@@ -14,8 +14,11 @@
 }
 else
 {
-    <div class="body-minHeight">
+    @*<div class="body-minHeight">
         <app username="">Loading ...</app>
+    </div>*@
+    <div class="body-minHeight">
+        <app username="'Rafael yonda'">Loading ...</app>
     </div>
 }
 
