--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-home.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-home.component.html
@@ -28,10 +28,10 @@
     <ap-search placeBottom="" ></ap-search>
     
     <div class="col-md-3">
-        <question-panel></question-panel>
+        <question-left-menu></question-left-menu>
     </div>
     <div class="col-md-6">
-        <answer-panel></answer-panel>
+        <question-body></question-body>
     </div>
     <div class="col-md-3">
         
