Dashboard profile routing added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/dashboard.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/dashboard.component.html
@@ -1,214 +1,7 @@
-﻿<style>
-    .dash-panel {
-        margin-top: 130px;
-        font-family: 'Myriad Pro';
-    }
-
-    .left-panel {
-        max-width: 150px;
-    }
-
-    .description {
-        font-family: 'arial';
-    }
-
-    .status-list > .row > ul > li {
-        float: left;
-        padding-left: 10px;
-    }
-
-    .progress-value {
-        color: #f29200;
-    }
-    /*=========Buttons========*/
-    ul {
-        list-style: none;
-        padding: 0;
-    }
-
-    .menu-button {
-        padding: 4px 12px;
-        font-family: typogroteskrounded;
-        font-weight: 600;
-        width: 100%;
-        margin: 5px 0;
-        background-color: #ededed;
-        border: none;
-        border-radius: 10px;
-    }
-
-         .menu-button:focus,.submit-panel > .menu-button:focus,.submit-panel > .menu-button:hover {
-            background-color: #f29200;
-            border: none;
-            outline: none;
-            outline-offset: 0;
-        }
-
-
-    .submit-panel > .menu-button {
-        max-width: 100px;
-        float: right;
-        margin-left: 15px;
-    }
-    /*=================*/
-
-    /*======Image======*/
-    .profile-pic {
-        text-align: center;
-    }
-
-    .profile-img {
-        height: 150px;
-        width: 150px;
-        border-radius: 75px;
-    }
-
-    .title {
-        text-align: center;
-        font-family: arial;
-        margin-top: 3px;
-    }
-
-    .profile-border {
-        width: 100%;
-    }
-    /*=============Status Lis=======*/
-    .status-list {
-        margin: 20px 10px;
-    }
-
-        .status-list > .row > .col-md-3 {
-            margin-top: 10px;
-            font-family: arial;
-        }
-
-    .inactive {
-        color: #bdbdbd;
-    }
-    /*==================form==============*/
-    .panel {
-        background-color: #f6f6f6;
-        border-radius: 0;
-    }
-
-    .panel-heading {
-        color: #ffffff;
-        background-color: #f29200;
-        border: none;
-        border-radius: 0;
-    }
-
-    .form-control {
-        background-color: #ededed;
-        border-radius: 0;
-        box-shadow: none;
-    }
-
-        .form-control:focus {
-            background-color: none;
-        }
-    /*====================Progress bar============*/
-
-    .progress-image {
-        position: relative;
-        overflow: hidden;
-        height: 10px;
-    }
-
-    .progress-background {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        opacity: 0.2;
-        border-radius: 10px;
-    }
-
-    .progress-bar-img {
-        width: 70%;
-        float: left;
-        height: 100%;
-        border-radius: 10px;
-    }
-</style>
-<ap-navdashboard></ap-navdashboard>
+﻿<ap-navdashboard></ap-navdashboard>
 <dash-tab></dash-tab>
-<div class="row dash-panel">
-    <!--<div class="col-lg-2"> space</div>-->
+<router-outlet></router-outlet>
 
-    <div class="col-lg-2 col-md-offset-2">
-        <div class="left-panel">
-            <div class="profile-pic">
-                <img class="profile-img" src="../images/userAdd.png" />
-                <div class="row title">Photo Edit</div>
-            </div>
-            <img class="profile-border" src="../images/border-horizontal.png" />
-            <div class="menu-list">
-                <ul>
-                    <li><button class="btn btn-default menu-button">Contact info</button> </li>
-                    <li><button class="btn btn-default menu-button">Biography</button> </li>
-                    <li><button class="btn btn-default menu-button">Education</button></li>
-                    <li><button class="btn btn-default menu-button">Experience</button></li>
-                    <li><button class="btn btn-default menu-button">Skills</button></li>
-                    <li><button class="btn btn-default menu-button">Practice Areas</button></li>
-                    <li><button class="btn btn-default menu-button">Insight</button></li>
 
-                </ul>
-            </div>
-        </div>
-
-    </div>
-    <div class="col-lg-6">
-        <div class="description">
-            <h1>User</h1>
-            <p>
-                Conceptually ksdjfklsdf sdlfjksldkjfj sdfjsd sdjfsd fsdjfpsdjf spdjds pfjsdpfosjd fojsdpofjsdofjsp dofjpsodj psodfpsdojfpsdfjspdfojsdsdp jfspdf sdspdo jfpsdojf psdjf psdfjspdfjspdofjspdofjspdojfpsdofjpsdofjspdofjpsdjfsdpfj
-            </p>
-        </div>
-        <div class="progresstitle">
-            your profile is <span class="progress-value">70%</span> complete
-        </div>
-        <div class="progress-image">
-            <img class="progress-bar-img" src="../images/border-horizontal.png" />
-            <img class="progress-background" src="../images/border-horizontal.png" />
-
-        </div>
-        <div class="status-list">
-            <div class="row">
-                <div class="col-md-3 inactive">(&#x2716;)Contact info</div>
-                <div class="col-md-3">(&#10004;)Biography</div>
-                <div class="col-md-3">(&#10004;)Education</div>
-                <div class="col-md-3 inactive">(&#x2716;)Experience</div>
-                <div class="col-md-3">(&#10004;)Experience</div>
-                <div class="col-md-3 inactive">(&#x2716;)Skills</div>
-                <div class="col-md-3">(&#10004;)Practice Areas</div>
-                <div class="col-md-3 inactive">(&#x2716;)Insight</div>
-            </div>
-        </div>
-
-        <div class="info-form">
-            <div class="panel panel-default">
-                <div class="panel-heading">Panel Heading</div>
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <label for="email">Tag Line</label>
-                            <input type="text" class="form-control" id="email">
-                        </div>
-                        <div class="col-md-6">
-                            <label for="email">Tag Line</label>
-                            <input type="text" class="form-control" id="email">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="submit-panel">
-                <button class="btn btn-default menu-button">Cancel</button>
-                <button class="btn btn-default menu-button">Submit</button>
-            </div>
-        </div>
-    </div>
-</div>
 
 
