emergency Commit... question module fixed error. Dashboard module  developing.

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/editprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/editprofile.component.html
@@ -71,8 +71,8 @@
                 </div>
             </div>
             <div class="submit-panel">
-                <button class="btn btn-default menu-button">Cancel</button>
-                <button class="btn btn-default menu-button">Submit</button>
+                <button class="btn btn-default menu-button" >Cancel</button>
+                <button class="btn btn-default menu-button" (click)="Submit()">Submit</button>
             </div>
         </div>
     </div>
