--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/contact.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/contact.component.html
@@ -1,10 +1,10 @@
 ﻿<div class="row">
     <div class="col-md-6">
         <label for="email">Tag Line</label>
-        <input type="text" class="profile-form" id="email">
+        <input type="text" [(ngModel)]="contact.firstName" class="profile-form" id="email">
     </div>
     <div class="col-md-6">
         <label for="email">Tag Line</label>
-        <input type="text" class="profile-form" id="email">
+        <input type="text" [(ngModel)]="contact.lastName" class="profile-form" id="email">
     </div>
 </div>
