Question files added only answer button design

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/contact.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/contact.component.html
@@ -1,7 +1,7 @@
 ﻿<div class="row">
     <div class="col-md-6">
         <label for="email">Tag Line</label>
-        <input type="text" [(ngModel)]="contact.firstName" class="profile-form" id="email">
+        <input type="text" [(ngModel)]="contact.firstName" class="profile-form" >
     </div>
     <div class="col-md-6">
         <label for="email">Tag Line</label>
