Question Details files adding... Question page  on answer click...modal pen

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.css
@@ -1,4 +1,8 @@
-﻿.btn{
+﻿.modal-dialog {
+    width: 600px;
+    margin: 250px auto;
+}
+.btn{
     padding: 2px 12px;
     border: 1px solid #bbcadc;
     background-color: #f1f8fb;
