--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -1,6 +1,6 @@
 ﻿<div *ngFor="let answer of answerList">
     <h1>&iquest;What is balanced score card?</h1>
-    <button class="btn btn-default"><i class="fa fa-pencil"></i>Answer</button>
+    <button class="btn btn-default" data-toggle="modal" data-target="#myModal"><i class="fa fa-pencil"></i>Answer</button>
         <div class="row">
             <div class="left-border">
                 <img class="image-border" src="../../../../images/border.png" />
@@ -13,4 +13,25 @@
             </div>
         </div>
         <hr />
+</div>
+
+<!-- ==========Modal======= -->
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Modal Header</h4>
+            </div>
+            <div class="modal-body">
+                <p>Some text in the modal.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
+    </div>
 </div>
