--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-home.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-home.component.html
@@ -32,6 +32,7 @@
     </div>
     <div class="col-md-6">
         <question-body></question-body>
+        <!--<question-details></question-details>-->
     </div>
     <div class="col-md-3">
         
