--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-home.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-home.component.html
@@ -31,8 +31,8 @@
         <question-left-menu></question-left-menu>
     </div>
     <div class="col-md-6">
-        <question-body></question-body>
-        <!--<question-details></question-details>-->
+        <!--<question-body></question-body>-->
+        <question-details></question-details>
     </div>
     <div class="col-md-3">
         
