--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -10,7 +10,40 @@
         <div class="header-info">{{question.subTitle}},{{date.getMonthName(question.date.getMonth())}} {{question.date.getDate()}} {{question.date.getFullYear()}}</div>
         <p class="answer-text">{{question.questionBody}}</p>
         <hr />
-        <img class="navbar-brand logo" src="../images/LOGO CUADRADO.png" />
+        <img class="like-logo" src="../images/LOGO CUADRADO.png" />
+        <div class="status-line">2</div>
+        <div class="status-line">Like</div>
+        <div class="status-line like-border"></div>
+        <div class="status-line">2</div>
+        <div class="status-line">Leidos</div>
+        <!-- social media icon -->
+        <div class="social-icon">
+            <i class="fa fa-facebook-square"></i>
+            <i class="fa fa-twitter-square"></i>
+            <i class="fa fa-external-link"></i>
+        </div>
+        <hr />
+        <p>
+            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                3comments, Show
+            </button>
+        </p>
+        <div class="collapse" id="collapseExample">
+            <div class="card card-block">
+                <div *ngFor="let answer of question.answers">
+                    <div class="row">
+
+                        <div class="article-details">
+                            <img class="user-image" src="../../../../images/avatar.png" />
+                            <div class="header-info">{{answer.user.name}},{{date.getMonthName(answer.date.getMonth())}} {{answer.date.getDate()}} {{answer.date.getFullYear()}}</div>
+                            <p class="answer-text">{{answer.answerText}}</p>
+                        </div>
+
+                    </div>
+                    <hr />
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <hr />
@@ -25,7 +58,21 @@
             <div class="header-info">{{answer.user.name}},{{answer.user.occupassion}}</div>
             <div class="header-info">{{answer.topics}},{{date.getMonthName(answer.date.getMonth())}} {{answer.date.getDate()}} {{answer.date.getFullYear()}}</div>
             <p class="answer-text">{{answer.answerText}}</p>
+            <hr />
+            <img class="like-logo" src="../images/LOGO CUADRADO.png" />
+            <div class="status-line">2</div>
+            <div class="status-line">Like</div>
+            <div class="status-line like-border"></div>
+            <div class="status-line">2</div>
+            <div class="status-line">Leidos</div>
+            <!-- social media icon -->
+            <div class="social-icon">
+                <i class="fa fa-facebook-square"></i>
+                <i class="fa fa-twitter-square"></i>
+                <i class="fa fa-external-link"></i>
+            </div>
         </div>
+
     </div>
     <hr />
 </div>
